# ToJ

./: .cursorrules  .env  .gitignore  AGENTS.md  ARCHITECTURE.md  ARQUITECTURE.md  AUDITORIA_ARQUITETURAL.md  GAME_DESING.md  README.md  SPRINTS.md  TASK.md  game.py  main.py  pyproject.toml  savegame.json  temp_add_skills.py  test_skills.py
.idx/: env.nix
.venvw/: pyvenv.cfg
.windsurf/rules/: .windsurfrules
ToJ_source/: .toj_source.py.swp  classes.py  map.py  toj_source.py
docs/: GUIDE_PASSIVES.md
orchestrator/: orchestrator.py
orchestrator/agents/: architect_agent.py  data_agent.py  ux_agent.py
orchestrator/tools/: file_tools.py
reports/: sim_report_20260424_235341.txt
src/content/: armor.py  items.py  passives.py  shop.py  skills.py  skills_loader.py  spell.py
src/data/: __init__.py  items.json  loader.py  monsters.json  passives.json  skills.json
src/engine/: bootstrap.py  events.py  game_logic.py  loop.py  map.py  ui_events.py
src/entities/: base.py  heroes.py  monsters.py
src/mechanics/: combat.py  math_operations.py
src/shared/: combat_topics.py  constants.py  types.py
src/storage/: save_manager.py
src/ui/: auto_test.py  combat_event_handlers.py  guesser.py  inventory_flow.py  navigation_menu.py  passive_flow.py  prompts.py  renderer.py  screens.py  (+4 more)
tests/: auto_test.py
toj_source/: armor.py  auto_test.py  classes.py  example_classes.py  example_wp.py  game_logic.py  guesser.py  interactions.py  items.py  map.py  math_operations.py  save_manager.py  shop.py  skills.py  spell.py  test_classes.py  toj_menu.py  utils.py  weapons.py
(+3 files in other folders)
